--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
 
   <!-- Main Content -->
   <div id="main-content" class="active">
-    <h1 id="countdownTitle">魁星 <br>誕生日まであと…</h1>
+    <h1 id="countdownTitle">魁星さん <br>誕生日まであと…</h1>
     <div id="countdown"></div>
     <img id="birthdayImage" src="birthday_art.png" alt="誕生日イラスト">
-    <a id="messageButton" href="https://forms.gle/71QwTHrwGuHQZQdr7" target="_blank">お祝いメッセージはこちらから</a>
+    <a id="messageButton" href="https://forms.gle/LrECReGpjTNoUvwi7" target="_blank">お祝いメッセージはこちらから</a>
     <div id="messageNotice">
       頂いたメッセージは2025年6月9日0時0分に更新します。<br>
       その後のメッセージは適宜更新いたします。是非たくさんのメッセージをお待ちしております！
