--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@
     "これからも活躍を楽しみにしています！",
     "素敵な一年になりますように！",
     "笑顔あふれる1年になりますように！"
+    "お誕生日おめでとう！"
+    "誕生日おめでと～"
+    "おめでとーう"
   ];
 
   // メッセージランダム表示
