--- a/index.html
+++ b/index.html
@@ -331,6 +331,8 @@
     "お誕生日おめでとう！"
     "誕生日おめでと～"
     "おめでとーう"
+    "実りある一年になるよう、これからも応援しています！"
+    "魁星さんお誕生日おめでとうございます✨　幸せいっぱいの1年になることを願っています!!"
   ];
 
   // メッセージランダム表示
