--- a/index.html
+++ b/index.html
@@ -327,11 +327,11 @@
     "ずっと応援しています！",
     "これからも活躍を楽しみにしています！",
     "素敵な一年になりますように！",
-    "笑顔あふれる1年になりますように！"
-    "お誕生日おめでとう！"
-    "誕生日おめでと～"
-    "おめでとーう"
-    "実りある一年になるよう、これからも応援しています！"
+    "笑顔あふれる1年になりますように！",
+    "お誕生日おめでとう！",
+    "誕生日おめでと～",
+    "おめでとーう",
+    "実りある一年になるよう、これからも応援しています！",
     "魁星さんお誕生日おめでとうございます✨　幸せいっぱいの1年になることを願っています!!"
   ];
 
