--- a/index.html
+++ b/index.html
@@ -326,13 +326,8 @@
     "魁星さん、お誕生日おめでとう！",
     "ずっと応援しています！",
     "これからも活躍を楽しみにしています！",
-    "素敵な一年になりますように！",
-    "笑顔あふれる1年になりますように！",
-    "お誕生日おめでとう！",
-    "誕生日おめでと～",
-    "おめでとーう",
     "実りある一年になるよう、これからも応援しています！",
-    "魁星さんお誕生日おめでとうございます✨　幸せいっぱいの1年になることを願っています!!"
+    "魁星さんお誕生日おめでとうございます✨　幸せいっぱいの1年になることを願っています!!",
   ];
 
   // メッセージランダム表示
