--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
   let showMessages = false;
 
   const messages = [
+    "実りある一年になるよう、これからも応援しています！",
+    "魁星さんお誕生日おめでとうございます✨　幸せいっぱいの1年になることを願っています!!"
     "魁星さん、お誕生日おめでとう！",
     "ずっと応援しています！",
     "これからも活躍を楽しみにしています！",
-    "実りある一年になるよう、これからも応援しています！",
-    "魁星さんお誕生日おめでとうございます✨　幸せいっぱいの1年になることを願っています!!",
   ];
 
   // メッセージランダム表示
